RESOLVED FIXED 203106
FileReader should not prevent entering the back/forward cache
https://bugs.webkit.org/show_bug.cgi?id=203106
Summary FileReader should not prevent entering the back/forward cache
Chris Dumez
Reported 2019-10-17 09:59:06 PDT
FileReader should not prevent entering the back/forward cache.
Attachments
Patch (14.82 KB, patch)
2019-10-17 12:52 PDT, Chris Dumez
no flags
Patch (15.43 KB, patch)
2019-10-17 14:12 PDT, Chris Dumez
no flags
Patch (15.38 KB, patch)
2019-10-17 16:48 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-10-17 12:52:57 PDT
Radar WebKit Bug Importer
Comment 2 2019-10-17 12:53:09 PDT
Chris Dumez
Comment 3 2019-10-17 14:12:30 PDT
Chris Dumez
Comment 4 2019-10-17 16:48:23 PDT
Chris Dumez
Comment 5 2019-10-18 12:37:31 PDT
Patch is ready for review.
Geoffrey Garen
Comment 6 2019-10-19 13:25:00 PDT
Comment on attachment 381248 [details] Patch r=me
Chris Dumez
Comment 7 2019-10-19 16:41:17 PDT
Comment on attachment 381248 [details] Patch Clearing flags on attachment: 381248 Committed r251327: <https://trac.webkit.org/changeset/251327>
Chris Dumez
Comment 8 2019-10-19 16:41:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.