FileReader should not prevent entering the back/forward cache https://bugs.webkit.org/show_bug.cgi?id=203106

Reviewed by Geoffrey Garen.

Source/WebCore:

FileReader should not prevent entering the back/forward cache. To support this,
its implementation now uses a SuspendableTaskQueue to dispatch events.

Test: fast/files/file-reader-back-forward-cache.html

* dom/ActiveDOMObject.cpp:
(WebCore::ActiveDOMObject::isAllowedToRunScript const):
* dom/ActiveDOMObject.h:
* dom/ScriptExecutionContext.cpp:
(WebCore::ScriptExecutionContext::resumeActiveDOMObjects):
* fileapi/FileReader.cpp:
(WebCore::FileReader::FileReader):
(WebCore::FileReader::stop):
(WebCore::FileReader::hasPendingActivity const):
(WebCore::FileReader::readInternal):
(WebCore::FileReader::abort):
(WebCore::FileReader::didStartLoading):
(WebCore::FileReader::didReceiveData):
(WebCore::FileReader::didFinishLoading):
(WebCore::FileReader::didFail):
(WebCore::FileReader::fireEvent):
* fileapi/FileReader.h:

LayoutTests:

Add layout test coverage.

* TestExpectations:
* fast/files/file-reader-back-forward-cache-expected.txt: Added.
* fast/files/file-reader-back-forward-cache.html: Added.

Canonical link: https://commits.webkit.org/216591@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251327 268f45cc-cd09-0410-ab3c-d52691b4dbfc